# FarRadio_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.cfg  setup.py
.github/workflows/: format.yml
pyfaradio/: __init__.py  core.py  faradio_wrapper.py  run.py
src/: wraper.cpp
src/include/: Detector.cpp  Detector.hpp  Field.cpp  Field.hpp  Tracer.cpp  Tracer.hpp  Vector.hpp  utils.hpp
src/include/Detector/: Detector.cpp  Detector.hpp
src/include/FaradioMPI/: FaradioMPI.cpp  FaradioMPI.hpp
src/include/Field/: Field.cpp  Field.hpp
src/include/Tracer/: Tracer.cpp  Tracer.hpp
src/include/Vector/: Vector.hpp
test/: test.ipynb  test.py
tests/: data.h5  gen_data.py  load.py  plot_tracer.py  run.ipynb  run.py  run_mpi.py  screen.yaml  test_basic.py
tests/betatron/: main.py  plot_field.py  plot_tracer.py  pyfaradio_mpi.py  run_mpi.py  save_data.h5  screen.yaml
tests/undulator/: gen_data.py  main.py  plot_field.py  plot_tracer.py  run.py  run_mpi.py
